fix width jumps

--- a/app/app.css
+++ b/app/app.css
@@ -38,6 +38,9 @@ header {
   padding: 1em;
   max-width: 970px;
   margin: auto;
+  & > * {
+    max-width: 940px;
+  }
 }
 
 footer {
@@ -61,7 +64,6 @@ footer {
 
 .fade-enter {
   opacity: 0.01;
-  position: absolute;
 }
 .fade-enter-active {
   opacity: 1;
